--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
   },
   "rules": {
     "eqeqeq": ["error", "always"],
-    "no-console": "warn",
+    "no-console": "off",
     "indent": [
       "error",
       4,
